@@ -3505,7 +3505,7 @@ create_env(...)
   HV* hv_self = (HV*)SvRV(sv_self);
 
   // Create env
-  SPVM_ENV* env = SPVM_API_new_env_raw(NULL);
+  SPVM_ENV* env = SPVM_API_new_env_raw();
   size_t iv_env = PTR2IV(env);
   SV* sviv_env = sv_2mortal(newSViv(iv_env));
   SV* sv_env = sv_2mortal(newRV_inc(sviv_env));
